# totpcli-rs

./: .gitignore  Cargo.toml  README.md  key.txt
src/: main.rs
