[package]
name = "totpcli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4" , features = ["derive"] }
dialoguer = "0.11"
image = "0.24"
log = "0.4"
pretty_env_logger = "0.5"
totp-rs = { version = "5.5" , features = ["qr","steam"] }
viuer = "0.7.1"
time = "0.3.31"


